Fix command-line parameter handling for odbc client tests

--- a/driver/ut/CMakeLists.txt
+++ b/driver/ut/CMakeLists.txt
@@ -69,7 +69,13 @@ function(declare_odbc_test_targets libname UNICODE)
         PRIVATE ${ODBC_INCLUDE_DIRECTORIES}
     )
 
-    add_test(NAME ${libname}-client-it COMMAND ${libname}-client-it)
+    if (TEST_DSN)
+        add_test(NAME ${libname}-client-it COMMAND ${libname}-client-it ${TEST_DSN})
+    endif ()
+
+    if (TEST_DSN_W)
+        add_test(NAME ${libname}-client-it-w COMMAND ${libname}-client-it ${TEST_DSN_W})
+    endif ()
 
     if (NANOODBC_LIBRARY
 #        AND (
@@ -92,14 +98,14 @@ function(declare_odbc_test_targets libname UNICODE)
         )
 
         if (TEST_DSN)
-            add_test(NAME "${libname}-${nanoname}-it" COMMAND ${libname}-${nanoname}-it DSN=${TEST_DSN})
+            add_test(NAME ${libname}-${nanoname}-it COMMAND ${libname}-${nanoname}-it DSN=${TEST_DSN})
             if (NOT (CMAKE_BUILD_TYPE_UC STREQUAL "TSAN" OR CMAKE_BUILD_TYPE_UC STREQUAL "ASAN" OR CMAKE_BUILD_TYPE_UC STREQUAL "MSAN"))
                 #TODO: add_test(NAME "${libname}-${nanoname}-valgrind-it" COMMAND valgrind -v --leak-check=full --show-leak-kinds=all $<TARGET_FILE:${libname}-${nanoname}-it> DSN=${TEST_DSN})
             endif ()
         endif ()
 
         if (TEST_DSN_W)
-            add_test(NAME "${libname}-${nanoname}-it-w" COMMAND ${libname}-${nanoname}-it DSN=${TEST_DSN_W})
+            add_test(NAME ${libname}-${nanoname}-it-w COMMAND ${libname}-${nanoname}-it DSN=${TEST_DSN_W})
             if (NOT (CMAKE_BUILD_TYPE_UC STREQUAL "TSAN" OR CMAKE_BUILD_TYPE_UC STREQUAL "ASAN" OR CMAKE_BUILD_TYPE_UC STREQUAL "MSAN"))
                 #TODO: add_test(NAME "${libname}-${nanoname}-valgrind-it-w" COMMAND valgrind -v --leak-check=full --show-leak-kinds=all $<TARGET_FILE:${libname}-${nanoname}-it> DSN=${TEST_DSN_W})
             endif ()
