--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ project (clickhouse-odbc VERSION 1.1.1.20191030 LANGUAGES C CXX)
 set (CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake/Modules")
 
 set (CMAKE_C_STANDARD 11)
-set (CMAKE_C_EXTENSIONS 0)
+#set (CMAKE_C_EXTENSIONS 0)
 set (CMAKE_C_STANDARD_REQUIRED 1)
 
 set (CMAKE_CXX_STANDARD 14)
