(somewhat) BREAKING CHANGE!
Rename driver-specific parameters to avoid clashes with system (iODBC Driver Manager) parameters:
    Trace to Log
    TraceFile to LogFile

Define and use custom [connection] attributes to avoid clashes with system (iODBC Driver Manager) attributes:
    SQL_ATTR_TRACE to CH_SQL_ATTR_TRACE
    SQL_ATTR_TRACEFILE to CH_SQL_ATTR_TRACEFILE

Duplicate [ODBC] section in configs and config samples to cover iODBC behaviour

--- a/.travis.yml
+++ b/.travis.yml
@@ -181,7 +181,7 @@ script:
     cat > $ODBCSYSINI/.odbcinst.ini <<-EOF
     [ODBC]
     Trace     = yes
-    TraceFile = /tmp/odbc-driver-manager-trace.log
+    TraceFile = /tmp/odbc-driver-manager.log
 
     [ODBC Drivers]
     clickhouse_driver   = Installed
@@ -199,6 +199,10 @@ script:
     EOF
   - |
     cat > $ODBCSYSINI/.odbc.ini <<-EOF
+    [ODBC]
+    Trace     = yes
+    TraceFile = /tmp/odbc-driver-manager.log
+
     [ODBC Data Sources]
     clickhouse_localhost   = clickhouse_driver
     clickhouse_localhost_w = clickhouse_driver_w
@@ -208,16 +212,16 @@ script:
     Description = ClickHouse DSN (ANSI, localhost)
     Url         = http://${CLICKHOUSE_SERVER_IP}
     Timeout     = 30
-    Trace       = yes
-    TraceFile   = /tmp/clickhouse-odbc-driver-trace.log
+    Log         = yes
+    LogFile     = /tmp/clickhouse-odbc-driver.log
 
     [clickhouse_localhost_w]
     Driver      = clickhouse_driver_w
     Description = ClickHouse DSN (Unicode, localhost)
     Url         = http://${CLICKHOUSE_SERVER_IP}
     Timeout     = 30
-    Trace       = yes
-    TraceFile   = /tmp/clickhouse-odbc-driver-w-trace.log
+    Log         = yes
+    LogFile     = /tmp/clickhouse-odbc-driver-w.log
     EOF
   - echo "Staring tests..."
   - ctest -VV
