--- a/packaging/unixodbc.ini
+++ b/packaging/unixodbc.ini
@@ -1,7 +1,7 @@
-# Place this file to ~/.odbcinst.ini or /etc/odbcinst.ini
+# Insert the content of this file into ~/.odbcinst.ini or /etc/odbcinst.ini
 
 [ODBC Drivers]
-ClickHouseDriver = Installed
+ClickHouseDriver  = Installed
 ClickHouseDriverW = Installed
 
 [ClickHouseDriver]
