--- a/driver/test/CMakeLists.txt
+++ b/driver/test/CMakeLists.txt
@@ -49,6 +49,7 @@ function(declare_odbc_test_targets libname UNICODE)
         client_utils.h
         client_test_base.h
         ${PROJECT_SOURCE_DIR}/driver/type_info.cpp
+        misc_it.cpp
         statement_parameters_it.cpp
         performance_it.cpp
     )
