Turn off -VV for ctest runs

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ env:
     - SOURCE_DIR=$TRAVIS_BUILD_DIR
     - BUILD_DIR=$TRAVIS_BUILD_DIR/build
     - RUN_DIR=$TRAVIS_BUILD_DIR/run
-    - EXTRA_CTEST_PARAMS="${EXTRA_CTEST_PARAMS:--VV}"
+#   - EXTRA_CTEST_PARAMS="${EXTRA_CTEST_PARAMS:--VV}"
 
 matrix:
   include:
